Update Java and Elasticsearch versions (RPB-266)
- We need Java 11 for using the latest Metafacture release
- Elasticsearch 1.x.x does not support Java 11, Elasticsearch
2.x.x does not support dots in field names, 5.6.16 does both